--- a/WpfAsistente/App.config
+++ b/WpfAsistente/App.config
@@ -1,61 +1,61 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Reactive.Interfaces" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.3.0.0" newVersion="2.3.0.0" />
+        <assemblyIdentity name="System.Reactive.Interfaces" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2.3.0.0" newVersion="2.3.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Reactive.Linq" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.3.0.0" newVersion="2.3.0.0" />
+        <assemblyIdentity name="System.Reactive.Linq" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2.3.0.0" newVersion="2.3.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Windows.Forms" publicKeyToken="b77a5c561934e089" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="System.Windows.Forms" publicKeyToken="b77a5c561934e089" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Drawing" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="System.Drawing" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System" publicKeyToken="b77a5c561934e089" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="System" publicKeyToken="b77a5c561934e089" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Core" publicKeyToken="b77a5c561934e089" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="System.Core" publicKeyToken="b77a5c561934e089" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Xml" publicKeyToken="b77a5c561934e089" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="System.Xml" publicKeyToken="b77a5c561934e089" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Xml.Linq" publicKeyToken="b77a5c561934e089" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="System.Xml.Linq" publicKeyToken="b77a5c561934e089" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="PresentationFramework" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="PresentationFramework" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="PresentationCore" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="PresentationCore" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="UIAutomationProvider" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="UIAutomationProvider" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="WindowsBase" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="WindowsBase" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="UIAutomationTypes" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="UIAutomationTypes" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -65,74 +65,78 @@
     
   <!--URLS-->
   <!--Nota para las URL que contengan & debe sustituirce & por &amp ej:ejournals;-->
-    <add key="catalogo" value="http://biblioteca.iae.edu.ar/uhtbin/cgisirsi.exe/x/x/0/57/49?user_id=siteiae" />
-    <add key="infosearch" value="http://austral.summon.serialssolutions.com" />
-    <add key="ejournals" value="http://ss3gn4aa4f.search.serialssolutions.com/ejp/?libHash=SS3GN4AA4F#/?language=es-mx&amp;titleType=ALL" />
-    <add key="bibliotecadigital" value="Https://login.bidi.la/saml/login/adfs.iae.edu.ar" />
-    <add key="basedatos" value="http://iae.edu.ar/es/laescuela/biblioteca/paginas/bases.aspx" />
+    <add key="catalogo" value="http://biblioteca.iae.edu.ar/uhtbin/cgisirsi.exe/x/x/0/57/49?user_id=siteiae"/>
+    <add key="infosearch" value="http://austral.summon.serialssolutions.com"/>
+    <add key="ejournals" value="http://ss3gn4aa4f.search.serialssolutions.com/ejp/?libHash=SS3GN4AA4F#/?language=es-mx&amp;titleType=ALL"/>
+    <add key="bibliotecadigital" value="Https://login.bidi.la/saml/login/adfs.iae.edu.ar"/>
+    <add key="basedatos" value="http://iae.edu.ar/es/laescuela/biblioteca/paginas/bases.aspx"/>
      <!--URLS FIN-->
 
  <!--Configuracion de la Pantalla de Selfies-->
-<add key="textBlockPos" value="33" /> <!--Posicion en la VERTICAL del bloque de texto 'Podes acceder a tu foto desde el siguiente.....'-->
-<add key="textFontSizeCountDown" value="5.20" /> <!--Tamano de fuente cuando esta en conteo 5 4 3'-->
-<add key="textFontSizeMsj" value="1.3" /> <!--Tamano de fuente cuando esta en conteo mensaje Podes acceder...'-->
+<add key="textBlockPos" value="33"/> <!--Posicion en la VERTICAL del bloque de texto 'Podes acceder a tu foto desde el siguiente.....'-->
+<add key="textFontSizeCountDown" value="5.20"/> <!--Tamano de fuente cuando esta en conteo 5 4 3'-->
+<add key="textFontSizeMsj" value="1.3"/> <!--Tamano de fuente cuando esta en conteo mensaje Podes acceder...'-->
   
 
-  <add key="qrCOntainerHORIZONTAL" value="50" /> <!--Posicion en la HORIZONTAL del QR'-->
-<add key="qrCOntainerVERTICAL" value="20" /> <!--Posicion en la VERTICAL del QR'-->
+  <add key="qrCOntainerHORIZONTAL" value="50"/> <!--Posicion en la HORIZONTAL del QR'-->
+<add key="qrCOntainerVERTICAL" value="20"/> <!--Posicion en la VERTICAL del QR'-->
   
-<add key="otraTextHORIZONTAL" value="18.33" /> <!--Posicion en la HORIZONTAL del texto Sacate otra selfie'-->
-<add key="otraTextVERTICAL" value="9.45" /> <!--Posicion en la VERTICAL del texto Sacate otra selfie'-->
-<add key="otraTextFontSize" value="60" /> <!--Tamaño de fuente del texto Sacate otra selfie-->
+<add key="otraTextHORIZONTAL" value="18.33"/> <!--Posicion en la HORIZONTAL del texto Sacate otra selfie'-->
+<add key="otraTextVERTICAL" value="9.45"/> <!--Posicion en la VERTICAL del texto Sacate otra selfie'-->
+<add key="otraTextFontSize" value="60"/> <!--Tamaño de fuente del texto Sacate otra selfie-->
   
-<add key="otrabuttonHORIZONTAL" value="23" /> <!--Posicion en la HORIZONTAL del Boton de Sacate otra selfie'-->
-<add key="otrabuttonVERTICAL" value="7.5" /> <!--Posicion en la VERTICAL del Boton de Sacate otra selfie'-->
-<add key="otrabuttonSize" value="15" /> <!--Tamano del Boton de Sacate otra selfie'-->
+<add key="otrabuttonHORIZONTAL" value="23"/> <!--Posicion en la HORIZONTAL del Boton de Sacate otra selfie'-->
+<add key="otrabuttonVERTICAL" value="7.5"/> <!--Posicion en la VERTICAL del Boton de Sacate otra selfie'-->
+<add key="otrabuttonSize" value="15"/> <!--Tamano del Boton de Sacate otra selfie'-->
   
-<add key="botonVolverHORIZONTAL" value="30" /> <!--Posicion en la HORIZONTAL del Boton Volver'-->
-<add key="botonVolverVERTICAL" value="5.5" /> <!--Posicion en la VERTICAL del Boton Volver'-->
-<add key="botonTamanoHeight" value="3.38" /> <!--Tamano del boton volver (valor respecto al alto)'-->
-<add key="botonTamanoWidth" value="12" /> <!--Tamano del boton volver (valor respecto al ancho)'-->
+<add key="botonVolverHORIZONTAL" value="30"/> <!--Posicion en la HORIZONTAL del Boton Volver'-->
+<add key="botonVolverVERTICAL" value="5.5"/> <!--Posicion en la VERTICAL del Boton Volver'-->
+<add key="botonTamanoHeight" value="3.38"/> <!--Tamano del boton volver (valor respecto al alto)'-->
+<add key="botonTamanoWidth" value="12"/> <!--Tamano del boton volver (valor respecto al ancho)'-->
 <!--Configuracion de la Pantalla de Selfies FIN-->
-  <add key="nombrepcLAN" value="GALADRIEL" />
+  <add key="nombrepcLAN" value="GALADRIEL"/>
   <!--Acceso para compartir la selfie-->
-  <add key="rutaLocal" value="C:\Users\BairesDev\Documents\rutalocal" />
+  <add key="rutaLocal" value="C:\Users\HL\Documents\rutalocal"/>
 
   <!--URL del ftp'-->
-<add key="fullrutaLAN" value="ftp://centromultimedia.com.ar/selfies/" />
+<add key="fullrutaLAN" value="ftp://centromultimedia.com.ar/selfies/"/>
   <!--usuario del ftp'-->
-  <add key="usuarioLAN" value="totem@centromultimedia.com.ar" />
+  <add key="usuarioLAN" value="totem@centromultimedia.com.ar"/>
   <!--password del ftp'-->
-  <add key="passwordLAN" value="totemHECTOR1!" />
+  <add key="passwordLAN" value="totemHECTOR1!"/>
   
   
-<add key="dominioLAN" value="10.18.30.89" />
+<add key="dominioLAN" value="10.18.30.89"/>
 
-<add key="rutaFTP" value="ftp://centromultimedia.com.ar/selfies/" />
+<add key="rutaFTP" value="ftp://centromultimedia.com.ar/selfies/"/>
 <!--Acceso para compartir la selfie FIN-->
 
 <!--Nombre de la imagen marca de agua q esta en resources-->
-<add key="marcaAgua" value="isologo2.jpg" />
+<add key="marcaAgua" value="isologo2.jpg"/>
  
   
   <!--Intervalo de captura(segundos)-->
-      <add key="captimer" value="5" />
+<add key="captimer" value="5"/>
 
     <!--Tiempo de reaccion por inactividad(minutos)-->
-  <add key="inactimer" value="3" />
+  <add key="inactimer" value="3"/>
 
-  <add key="startdefaultbuttons" value="false" />
+  <add key="startdefaultbuttons" value="false"/>
   <!--Zocalo-->
-  <add key="browserheight" value="70" />
-  <add key="zocaloheight" value="25" />
-
-
+  <add key="zocaloheight" value="25"/>
+  
   <!--backbutton-->
-  <add key="volverporcalto" value="3.18" />
-  <add key="volverporcancho" value="6" />
+  <add key="volverporcalto" value="3.18"/>
+  <add key="volverporcancho" value="6"/>
+
+  <!--to Add new -->
+  <add key="browserheight" value="70" />
+  <add key="volverMenuFromBotton" value="-2" />
+  <add key="volverMenuFromLeft" value="3" />
+  <add key="shortMenu" value="18" />
+
+
+
 
 </appSettings>
-
- 
-  
 </configuration>
